# llm-playground

./: .gitignore  CLAUDE.md  DATAPIPELINE.md  README.md  pyproject.toml  requirements.txt  test.py
artifacts/: tokenizer.json
data/: README.md  pipeline.py
data/cleaning/: deduplicator.py  filters.py
data/configs/: data_config.yaml
data/ingestion/: downloader.py
data/registry/: hub_pusher.py
data/tokenizer/: encoder.py  trainer.py
docs/: HDL.md  LLD-phase 1.md  LLD-phase2.md
model/: dataloader.py  gpt.py  loader.py  tokenizer_utils.py  train.py
model/configs/: model_config.yaml
model/eval/: hellaswag.py
model/gpt2_grpo_merged/: config.json
posttrain/reward_model/: config.py  infer_rm.py  prepare_rm_data.py  train_rm.py
posttrain/rl/: config.py  grpo.py  prompts.txt  sandbox.py  train_grpo_gpu.py
posttrain/sft/: config.py  infer_sft.py  tokenize_ultrachat.py  train_sft_lora.py
pretrain/model/: fineweb.py  train_gpt2_5BT.py
serve/: app.py
serve/templates/: index.html
tests/: test_dataloader.py  test_deduplicator.py  test_downloader.py  test_encoder.py  test_filters.py  test_gpt.py  test_pipeline.py  test_tokenizer_trainer.py
