[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_playground"
version = "0.1.0"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["data*", "model*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
tmp_path_retention_policy = "none"
