[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_playground"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2.0",
    "tokenizers>=0.19.0",
    "numpy>=1.26.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0.0",
    "datasets>=2.20.0",
    "huggingface_hub>=0.23.0",
    "datasketch>=1.6.5",
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["data*", "model*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
tmp_path_retention_policy = "none"
